@@ -1,5 +1,11 @@
 package core.framework.search.impl;
 
+import co.elastic.clients.elasticsearch._types.ScriptSortType;
+import co.elastic.clients.elasticsearch._types.SearchType;
+import co.elastic.clients.elasticsearch._types.SortOptions;
+import co.elastic.clients.elasticsearch._types.SortOrder;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.json.JsonData;
 import core.framework.inject.Inject;
 import core.framework.json.JSON;
 import core.framework.search.ClusterStateResponse;
@@ -9,14 +15,10 @@ import core.framework.search.ForEach;
 import core.framework.search.IntegrationTest;
 import core.framework.search.SearchRequest;
 import core.framework.search.SearchResponse;
+import core.framework.search.query.Sorts;
 import core.framework.util.ClasspathResources;
 import core.framework.util.Lists;
 import core.framework.util.Maps;
-import org.elasticsearch.script.Script;
-import org.elasticsearch.search.aggregations.AggregationBuilders;
-import org.elasticsearch.search.aggregations.metrics.Sum;
-import org.elasticsearch.search.sort.ScriptSortBuilder;
-import org.elasticsearch.search.sort.SortBuilders;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 
@@ -30,15 +32,14 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import static core.framework.search.query.Aggregations.sum;
+import static core.framework.search.query.Queries.match;
+import static core.framework.search.query.Queries.range;
+import static core.framework.search.query.Queries.term;
 import static java.util.function.Function.identity;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.IntStream.range;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.elasticsearch.index.query.QueryBuilders.boolQuery;
-import static org.elasticsearch.index.query.QueryBuilders.matchAllQuery;
-import static org.elasticsearch.index.query.QueryBuilders.matchQuery;
-import static org.elasticsearch.index.query.QueryBuilders.rangeQuery;
-import static org.elasticsearch.index.query.QueryBuilders.termQuery;
 
 /**
  * @author neo
@@ -51,7 +52,7 @@ class ElasticSearchIntegrationTest extends IntegrationTest {
 
     @AfterEach
     void cleanup() {
-        documentType.bulkDelete(range(0, 100).mapToObj(String::valueOf).collect(Collectors.toList()));
+        documentType.bulkDelete(range(0, 100).mapToObj(String::valueOf).toList());
         elasticSearch.refreshIndex("document");
     }
 
@@ -66,27 +67,27 @@ class ElasticSearchIntegrationTest extends IntegrationTest {
     @Test
     void index() {
         TestDocument document = document("2", "value2", 2, 0,
-                ZonedDateTime.now(),
-                LocalTime.of(12, 1, 2, 200000000));
+            ZonedDateTime.now(),
+            LocalTime.of(12, 1, 2, 200000000));
         documentType.index(document.id, document);
 
         Optional<TestDocument> returnedDocument = documentType.get(document.id);
         assertThat(returnedDocument).get()
-                .usingRecursiveComparison()
-                .withComparatorForType(ChronoZonedDateTime.timeLineOrder(), ZonedDateTime.class)
-                .isEqualTo(document);
+            .usingRecursiveComparison()
+            .withComparatorForType(ChronoZonedDateTime.timeLineOrder(), ZonedDateTime.class)
+            .isEqualTo(document);
     }
 
     @Test
     void forEach() {
         documentType.bulkIndex(range(0, 30).mapToObj(i -> document(String.valueOf(i), String.valueOf(i), i, 0, null, null))
-                .collect(toMap(document -> document.id, identity())));
+            .collect(toMap(document -> document.id, identity())));
         elasticSearch.refreshIndex("document");
 
         List<TestDocument> results = Lists.newArrayList();
 
         ForEach<TestDocument> forEach = new ForEach<>();
-        forEach.query = matchAllQuery();
+        forEach.query = new Query.Builder().matchAll(m -> m).build();
         forEach.limit = 7;
         forEach.consumer = results::add;
 
@@ -98,9 +99,9 @@ class ElasticSearchIntegrationTest extends IntegrationTest {
     @Test
     void complete() {
         documentType.bulkIndex(Map.of("1", document("1", "HashSet", 1, 0, null, null),
-                "2", document("2", "HashMap", 2, 0, null, null),
-                "3", document("3", "TreeSet", 3, 0, null, null),
-                "4", document("4", "TreeMap", 4, 0, null, null)));
+            "2", document("2", "HashMap", 2, 0, null, null),
+            "3", document("3", "TreeSet", 3, 0, null, null),
+            "4", document("4", "TreeMap", 4, 0, null, null)));
         elasticSearch.refreshIndex("document");
 
         List<String> options = documentType.complete("hash", "completion1", "completion2");
@@ -115,28 +116,31 @@ class ElasticSearchIntegrationTest extends IntegrationTest {
 
         // test synonyms
         var request = new SearchRequest();
-        request.query = boolQuery()
-                .must(matchQuery("string_field", "first"))
-                .filter(termQuery("enum_field", JSON.toEnumValue(TestDocument.TestEnum.VALUE1)));
-        request.sorts.add(SortBuilders.scriptSort(new Script("doc['int_field'].value * 3"), ScriptSortBuilder.ScriptSortType.NUMBER));
+        request.type = SearchType.QueryThenFetch;
+        request.query = new Query.Builder().bool(b -> b.must(m -> m.match(match("string_field", "first")))
+            .filter(f -> f.term(term("enum_field", JSON.toEnumValue(TestDocument.TestEnum.VALUE1))))).build();
+
+        request.sorts.add(SortOptions.of(builder -> builder.script(s ->
+            s.script(script -> script.inline(i -> i.source("doc['int_field'].value * 3"))).type(ScriptSortType.Number))));
+
         SearchResponse<TestDocument> response = documentType.search(request);
 
         assertThat(response.totalHits).isEqualTo(1);
         assertThat(response.hits).hasSize(1)
-                .first().usingRecursiveComparison()
-                .withComparatorForType(ChronoZonedDateTime.timeLineOrder(), ZonedDateTime.class)
-                .isEqualTo(document);
+            .first().usingRecursiveComparison()
+            .withComparatorForType(ChronoZonedDateTime.timeLineOrder(), ZonedDateTime.class)
+            .isEqualTo(document);
 
         // test stemmer
         request = new SearchRequest();
-        request.query = matchQuery("string_field", "test");
+        request.query = new Query.Builder().match(match("string_field", "test")).build();
         response = documentType.search(request);
 
         assertThat(response.totalHits).isEqualTo(1);
         assertThat(response.hits).hasSize(1)
-                .first().usingRecursiveComparison()
-                .withComparatorForType(ChronoZonedDateTime.timeLineOrder(), ZonedDateTime.class)
-                .isEqualTo(document);
+            .first().usingRecursiveComparison()
+            .withComparatorForType(ChronoZonedDateTime.timeLineOrder(), ZonedDateTime.class)
+            .isEqualTo(document);
     }
 
     @Test
@@ -150,17 +154,18 @@ class ElasticSearchIntegrationTest extends IntegrationTest {
         elasticSearch.refreshIndex("document");
 
         var request = new SearchRequest();
-        request.query = rangeQuery("zoned_date_time_field").from(from).to(to);
+        request.query = new Query.Builder().range(range("zoned_date_time_field", from, to)).build();
+        request.sorts.add(Sorts.fieldSort("id", SortOrder.Asc));
         SearchResponse<TestDocument> response = documentType.search(request);
         assertThat(response.totalHits).isEqualTo(3);
         assertThat(response.hits.stream().map(document1 -> document1.stringField).collect(Collectors.toList()))
-                .containsOnly("value1", "value2", "value3");
+            .containsOnly("value1", "value2", "value3");
 
-        request.query = rangeQuery("local_time_field").gt(LocalTime.of(13, 0));
+        request.query = new Query.Builder().range(r -> r.field("local_time_field").gt(JsonData.of(LocalTime.of(13, 0)))).build();
         response = documentType.search(request);
         assertThat(response.totalHits).isEqualTo(2);
         assertThat(response.hits.stream().map(document -> document.stringField).collect(Collectors.toList()))
-                .containsOnly("value3", "value4");
+            .containsOnly("value3", "value4");
     }
 
     @Test
@@ -215,15 +220,15 @@ class ElasticSearchIntegrationTest extends IntegrationTest {
         var request = new SearchRequest();
         request.skip = 0;
         request.limit = 1;
-        request.query = matchQuery("string_field", "value1");
-        request.aggregations.add(AggregationBuilders.sum("totalValue").field("double_field"));
+        request.query = new Query.Builder().match(match("string_field", "value1")).build();
+        request.aggregations.put("totalValue", sum("double_field"));
         SearchResponse<TestDocument> response = documentType.search(request);
 
         assertThat(response.totalHits).isEqualTo(2);
         assertThat(response.hits).hasSize(1);
         assertThat(response.aggregations).containsKeys("totalValue");
 
-        var sum = BigDecimal.valueOf(((Sum) response.aggregations.get("totalValue")).getValue()).setScale(4, RoundingMode.HALF_UP);
+        var sum = BigDecimal.valueOf(response.aggregations.get("totalValue").sum().value()).setScale(4, RoundingMode.HALF_UP);
         assertThat(sum).isEqualTo("19.1400");
     }
 
@@ -238,7 +243,7 @@ class ElasticSearchIntegrationTest extends IntegrationTest {
         elasticSearch.refreshIndex("document");
 
         var request = new SearchRequest();
-        request.query = matchAllQuery();
+        request.query = new Query.Builder().matchAll(m -> m).build();
         request.limit = 5;
         request.trackTotalHitsUpTo = 10;
         SearchResponse<TestDocument> response = documentType.search(request);
